--- a/Opsi.Services/Opsi.Services.csproj
+++ b/Opsi.Services/Opsi.Services.csproj
@@ -26,5 +26,6 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+    <PackageReference Include="Functions.Worker.ContextAccessor" Version="2.0.0" />
   </ItemGroup>
 </Project>
