Renamed Opsi.Functions2 to Opsi.Functions.

--- a/Opsi.Functions/Properties/launchSettings.json
+++ b/Opsi.Functions/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "profiles": {
-    "Opsi.Functions2": {
+    "Opsi.Functions": {
       "commandName": "Project",
       "commandLineArgs": "--port 7069",
       "launchBrowser": false
