Added spec tests for ProjectService.

--- a/Opsi.Services.Specs/Opsi.Services.Specs.csproj
+++ b/Opsi.Services.Specs/Opsi.Services.Specs.csproj
@@ -17,6 +17,7 @@
 </PackageReference>
     <PackageReference Include="FakeItEasy" Version="7.4.0" />
     <PackageReference Include="FluentAssertions" Version="6.11.0" />
+    <PackageReference Include="Azure.Data.Tables" Version="12.8.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -25,5 +26,6 @@
     <ProjectReference Include="..\Opsi.Common\Opsi.Common.csproj" />
     <ProjectReference Include="..\Opsi.Pocos\Opsi.Pocos.csproj" />
     <ProjectReference Include="..\Opsi.Functions\Opsi.Functions.csproj" />
+    <ProjectReference Include="..\Opsi.AzureStorage\Opsi.AzureStorage.csproj" />
   </ItemGroup>
 </Project>
