--- a/Opsi.Services/Opsi.Services.csproj
+++ b/Opsi.Services/Opsi.Services.csproj
@@ -18,11 +18,17 @@
     <None Remove="DiModules\" />
     <None Remove="QueueHandlers\" />
     <None Remove="QueueHandlers\Dependencies\" />
+    <None Remove="TableServices\" />
+    <None Remove="Auth\" />
+    <None Remove="Auth\OneTimeAuth\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DiModules\" />
     <Folder Include="QueueHandlers\" />
     <Folder Include="QueueHandlers\Dependencies\" />
+    <Folder Include="TableServices\" />
+    <Folder Include="Auth\" />
+    <Folder Include="Auth\OneTimeAuth\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
