--- a/Opsi.Services/Opsi.Services.csproj
+++ b/Opsi.Services/Opsi.Services.csproj
@@ -22,6 +22,7 @@
     <None Remove="Auth\" />
     <None Remove="Auth\OneTimeAuth\" />
     <None Remove="QueueServices\" />
+    <None Remove="InternalTypes\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DiModules\" />
@@ -31,6 +32,7 @@
     <Folder Include="Auth\" />
     <Folder Include="Auth\OneTimeAuth\" />
     <Folder Include="QueueServices\" />
+    <Folder Include="InternalTypes\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
