--- a/Opsi.Services.Specs/Opsi.Services.Specs.csproj
+++ b/Opsi.Services.Specs/Opsi.Services.Specs.csproj
@@ -37,6 +37,7 @@
     <None Remove="Auth\" />
     <None Remove="Auth\OneTimeAuth\" />
     <None Remove="QueueServices\" />
+    <None Remove="Webhooks\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="QueueHandlers\" />
@@ -46,5 +47,6 @@
     <Folder Include="Auth\" />
     <Folder Include="Auth\OneTimeAuth\" />
     <Folder Include="QueueServices\" />
+    <Folder Include="Webhooks\" />
   </ItemGroup>
 </Project>
