--- a/Opsi.Services/Opsi.Services.csproj
+++ b/Opsi.Services/Opsi.Services.csproj
@@ -23,6 +23,7 @@
     <None Remove="Auth\OneTimeAuth\" />
     <None Remove="QueueServices\" />
     <None Remove="InternalTypes\" />
+    <None Remove="Webhooks\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DiModules\" />
@@ -33,6 +34,7 @@
     <Folder Include="Auth\OneTimeAuth\" />
     <Folder Include="QueueServices\" />
     <Folder Include="InternalTypes\" />
+    <Folder Include="Webhooks\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
