--- a/Opsi.Services.Specs/Opsi.Services.Specs.csproj
+++ b/Opsi.Services.Specs/Opsi.Services.Specs.csproj
@@ -38,6 +38,7 @@
     <None Remove="Auth\OneTimeAuth\" />
     <None Remove="QueueServices\" />
     <None Remove="Webhooks\" />
+    <None Remove="InternalTypes\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="QueueHandlers\" />
@@ -48,5 +49,6 @@
     <Folder Include="Auth\OneTimeAuth\" />
     <Folder Include="QueueServices\" />
     <Folder Include="Webhooks\" />
+    <Folder Include="InternalTypes\" />
   </ItemGroup>
 </Project>
