--- a/Opsi.Services/Opsi.Services.csproj
+++ b/Opsi.Services/Opsi.Services.csproj
@@ -24,6 +24,7 @@
     <None Remove="QueueServices\" />
     <None Remove="InternalTypes\" />
     <None Remove="Webhooks\" />
+    <None Remove="Extensions\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DiModules\" />
@@ -35,6 +36,7 @@
     <Folder Include="QueueServices\" />
     <Folder Include="InternalTypes\" />
     <Folder Include="Webhooks\" />
+    <Folder Include="Extensions\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
