Webhook properties are now better structured.

--- a/Opsi.Constants/Opsi.Constants.csproj
+++ b/Opsi.Constants/Opsi.Constants.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Webhooks\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Webhooks\" />
+  </ItemGroup>
 </Project>
