Added ProjectHandler function.

--- a/Opsi.Functions.Specs/Opsi.Functions.Specs.csproj
+++ b/Opsi.Functions.Specs/Opsi.Functions.Specs.csproj
@@ -24,11 +24,13 @@
     <ProjectReference Include="..\Opsi.Functions\Opsi.Functions.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <None Remove="Administrator\" />
     <None Remove="Middleware\" />
+    <None Remove="Functions\" />
+    <None Remove="Functions\Administrator\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Administrator\" />
     <Folder Include="Middleware\" />
+    <Folder Include="Functions\" />
+    <Folder Include="Functions\Administrator\" />
   </ItemGroup>
 </Project>
