Modified the row key policies for storing resources.

--- a/Opsi.AzureStorage/Opsi.AzureStorage.csproj
+++ b/Opsi.AzureStorage/Opsi.AzureStorage.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Azure.Data.Tables" Version="12.8.0" />
+    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Opsi.Common\Opsi.Common.csproj" />
@@ -22,10 +23,12 @@
     <None Remove="TableEntities\" />
     <None Remove="Types\" />
     <None Remove="DiModules\" />
+    <None Remove="RowKeys\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="TableEntities\" />
     <Folder Include="Types\" />
     <Folder Include="DiModules\" />
+    <Folder Include="RowKeys\" />
   </ItemGroup>
 </Project>
