--- a/Opsi.Services/Opsi.Services.csproj
+++ b/Opsi.Services/Opsi.Services.csproj
@@ -25,6 +25,7 @@
     <None Remove="InternalTypes\" />
     <None Remove="Webhooks\" />
     <None Remove="Extensions\" />
+    <None Remove="RowKeys\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DiModules\" />
@@ -37,6 +38,7 @@
     <Folder Include="InternalTypes\" />
     <Folder Include="Webhooks\" />
     <Folder Include="Extensions\" />
+    <Folder Include="RowKeys\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
