--- a/Opsi.AzureStorage/Opsi.AzureStorage.csproj
+++ b/Opsi.AzureStorage/Opsi.AzureStorage.csproj
@@ -24,11 +24,13 @@
     <None Remove="Types\" />
     <None Remove="DiModules\" />
     <None Remove="KeyPolicies\" />
+    <None Remove="Types\KeyPolicies\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="TableEntities\" />
     <Folder Include="Types\" />
     <Folder Include="DiModules\" />
     <Folder Include="KeyPolicies\" />
+    <Folder Include="Types\KeyPolicies\" />
   </ItemGroup>
 </Project>
