--- a/Opsi.AzureStorage.Specs/Opsi.AzureStorage.Specs.csproj
+++ b/Opsi.AzureStorage.Specs/Opsi.AzureStorage.Specs.csproj
@@ -15,7 +15,8 @@
     <PackageReference Include="coverlet.collector" Version="6.0.0"><IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 <PrivateAssets>all</PrivateAssets>
 </PackageReference>
-    <PackageReference Include="FluentAssertions" Version="6.11.0" />
+    <PackageReference Include="FluentAssertions" Version="6.12.0" />
+    <PackageReference Include="FakeItEasy" Version="7.4.0" />
   </ItemGroup>
 
   <ItemGroup>
