--- a/Opsi.Common/Opsi.Common.csproj
+++ b/Opsi.Common/Opsi.Common.csproj
@@ -12,4 +12,7 @@
   <ItemGroup>
     <Folder Include="Exceptions\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Opsi.Constants\Opsi.Constants.csproj" />
+  </ItemGroup>
 </Project>
