First commit of Opsi.Web.

--- a/Opsi.Web/package.json
+++ b/Opsi.Web/package.json
@@ -15,6 +15,9 @@
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
     "@tsconfig/svelte": "^5.0.0",
     "@types/node": "^20.8.0",
+    "carbon-components-svelte": "^0.81.0",
+    "carbon-icons-svelte": "^12.3.0",
+    "carbon-preprocess-svelte": "^0.10.0",
     "sass": "^1.69.0",
     "scss": "^0.2.4",
     "smui-theme": "^7.0.0-beta.15",
