--- a/Opsi.Web/package.json
+++ b/Opsi.Web/package.json
@@ -25,6 +25,7 @@
     "svelte-add": "^2023.9.17-0.0",
     "svelte-check": "^3.4.6",
     "svelte-preprocess": "^5.0.4",
+    "svelte-routing": "^2.9.0",
     "tslib": "^2.6.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
