--- a/Opsi.Web/package.json
+++ b/Opsi.Web/package.json
@@ -14,7 +14,9 @@
     "@smui/top-app-bar": "^7.0.0-beta.15",
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
     "@tsconfig/svelte": "^5.0.0",
+    "@types/filesystem": "^0.0.35",
     "@types/node": "^20.8.0",
+    "@types/wicg-file-system-access": "^2023.10.4",
     "carbon-components-svelte": "^0.82.4",
     "carbon-icons-svelte": "^12.3.0",
     "carbon-preprocess-svelte": "^0.10.0",
