--- a/Opsi.Web/tsconfig.json
+++ b/Opsi.Web/tsconfig.json
@@ -19,7 +19,10 @@
       "@/*": [
         "src/*"
       ]
-    }
+    },
+    "types": [
+      "@types/filesystem",
+      "@types/wicg-file-system-access"]
   },
   "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
   "references": [{ "path": "./tsconfig.node.json" }]
