Now handles resource downloads, with access check and tests.

--- a/Opsi.Functions.Specs/Opsi.Functions.Specs.csproj
+++ b/Opsi.Functions.Specs/Opsi.Functions.Specs.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Opsi.Functions\Opsi.Functions.csproj" />
+    <ProjectReference Include="../Opsi.Functions/Opsi.Functions.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Middleware\" />
