--- a/Opsi.Services.Specs/Opsi.Services.Specs.csproj
+++ b/Opsi.Services.Specs/Opsi.Services.Specs.csproj
@@ -22,11 +22,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../Opsi.Functions/Opsi.Functions.csproj" />
     <ProjectReference Include="..\Opsi.Services\Opsi.Services.csproj" />
     <ProjectReference Include="..\Opsi.Abstractions\Opsi.Abstractions.csproj" />
     <ProjectReference Include="..\Opsi.Common\Opsi.Common.csproj" />
     <ProjectReference Include="..\Opsi.Pocos\Opsi.Pocos.csproj" />
-    <ProjectReference Include="..\Opsi.Functions\Opsi.Functions.csproj" />
     <ProjectReference Include="..\Opsi.AzureStorage\Opsi.AzureStorage.csproj" />
   </ItemGroup>
   <ItemGroup>
