--- a/Opsi.Services.Specs/Opsi.Services.Specs.csproj
+++ b/Opsi.Services.Specs/Opsi.Services.Specs.csproj
@@ -28,6 +28,7 @@
     <ProjectReference Include="..\Opsi.Common\Opsi.Common.csproj" />
     <ProjectReference Include="..\Opsi.Pocos\Opsi.Pocos.csproj" />
     <ProjectReference Include="..\Opsi.AzureStorage\Opsi.AzureStorage.csproj" />
+    <ProjectReference Include="..\Opsi.Constants\Opsi.Constants.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="QueueHandlers\" />
